--- a/src/app/loadout/loadout-edit/LoadoutEditBucket.m.scss
+++ b/src/app/loadout/loadout-edit/LoadoutEditBucket.m.scss
@@ -92,7 +92,7 @@
 
 .addButton {
   composes: resetButton from '../../dim-ui/common.m.scss';
-  composes: pull-item-button from global;
+  composes: pullItemButton from '../../inventory-page/StoreBucket.m.scss';
   color: currentColor;
   width: 100%;
   padding: 0 0 4px 0;
