--- a/src/app/inventory-page/StoreBucket.m.scss
+++ b/src/app/inventory-page/StoreBucket.m.scss
@@ -78,3 +78,34 @@
   height: var(--item-size);
   width: var(--item-size);
 }
+
+.subClass {
+  // hide normal "equipped" effects
+  :global(.equipped-item) {
+    border-color: transparent;
+    padding-top: 0;
+  }
+
+  :global(.item-drag-container) {
+    @include interactive($hover: true) {
+      // don't display the default outline when hovering over a draggable subclass item
+      outline: none;
+
+      // allow the pseudo-element to render outside the bounds of the item
+      contain: layout style;
+
+      // render a diamond-shaped pseudo-element to act as the border
+      &::before {
+        content: '';
+        position: absolute;
+        width: var(--item-size);
+        height: var(--item-size);
+        transform: rotate(45deg) scale(0.7);
+        outline-width: 2px;
+        box-sizing: border-box;
+
+        @include draggable-hover-border;
+      }
+    }
+  }
+}
