--- a/src/app/inventory-page/StoreBuckets.m.scss
+++ b/src/app/inventory-page/StoreBuckets.m.scss
@@ -28,3 +28,9 @@
 .accountWideCell {
   grid-column: 1 / span var(--num-characters);
 }
+
+// For account-wide buckets like consumables, in single-character view, split
+// the horizontal space evenly between vault and character.
+.singleCharacterAccountWideRow {
+  grid-template-columns: 1fr 1fr;
+}
