Get rid of .destiny1 and .destiny2 classes

--- a/src/app/dim-ui/ElementIcon.m.scss
+++ b/src/app/dim-ui/ElementIcon.m.scss
@@ -7,7 +7,9 @@
   display: inline-block;
   filter: saturate(2.5);
 
-  :global(.destiny1) & {
+  // The D1 icons are a bit too small in the item badge, so we'll make them a
+  // bit bigger
+  &.d1Badge {
     width: calc((10 / 50) * var(--item-size));
     height: calc((10 / 50) * var(--item-size));
   }
