--- a/src/app/inventory-page/DesktopStores.m.scss
+++ b/src/app/inventory-page/DesktopStores.m.scss
@@ -1,5 +1,15 @@
 @use '../variables.scss' as *;
 
+.content {
+  width: 100%;
+
+  // Prevent collapsing at smaller than iPad landscape sizes
+  min-width: calc(
+    (var(--num-characters) + 1) *
+      (var(--inventory-column-padding) * 2 + var(--character-column-width))
+  );
+}
+
 .buttons {
   display: grid;
   grid-template-rows: 46px 1fr;
