--- a/src/app/inventory-page/StoreBucket.scss
+++ b/src/app/inventory-page/StoreBucket.scss
@@ -1,17 +1,19 @@
 @use '../variables.scss' as *;
 
-.sub-bucket {
-  min-height: var(--item-size);
-  display: grid;
-  grid-template-columns: repeat(auto-fill, var(--item-size));
-  gap: var(--item-margin);
-  align-content: flex-start;
-  align-items: flex-start;
-  padding: 4px 0 calc(var(--item-margin) + 4px) 0;
-  position: relative;
+@layer base {
+  .sub-bucket {
+    min-height: var(--item-size);
+    display: grid;
+    grid-template-columns: repeat(auto-fill, var(--item-size));
+    gap: var(--item-margin);
+    align-content: flex-start;
+    align-items: flex-start;
+    padding: 4px 0 calc(var(--item-margin) + 4px) 0;
+    position: relative;
 
-  &:empty {
-    min-height: 0;
-    padding: 0;
+    &:empty {
+      min-height: 0;
+      padding: 0;
+    }
   }
 }
