--- a/src/app/store-stats/StoreStats.m.scss
+++ b/src/app/store-stats/StoreStats.m.scss
@@ -1,3 +1,5 @@
+@use '../variables.scss' as *;
+
 .vaultStats {
   max-width: 230px;
   display: grid;
@@ -9,13 +11,13 @@
   margin-top: 9px;
   color: var(--theme-header-characters-txt);
 
-  img {
-    justify-self: center;
-  }
-
-  :global(.phone-portrait) & {
+  @include phone-portrait {
     flex: 1;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  img {
+    justify-self: center;
   }
 }
