--- a/src/app/inventory-page/StoreBucket.scss
+++ b/src/app/inventory-page/StoreBucket.scss
@@ -15,5 +15,24 @@
       min-height: 0;
       padding: 0;
     }
+
+    &::before {
+      content: '';
+
+      opacity: 0;
+
+      width: 100%;
+      height: 100%;
+
+      position: absolute;
+
+      z-index: 9;
+
+      display: none;
+
+      .drag-perf-show & {
+        display: block;
+      }
+    }
   }
 }
