De-uppercase loadout names

--- a/src/app/loadout/LoadoutView.m.scss
+++ b/src/app/loadout/LoadoutView.m.scss
@@ -27,7 +27,9 @@
     flex-direction: row;
     gap: 8px;
     margin: 0 !important;
-    font-size: 16px;
+    font-size: 18px;
+    text-transform: none;
+    letter-spacing: normal;
   }
 }
 
