--- a/src/app/dim-ui/EnergyIncrements.m.scss
+++ b/src/app/dim-ui/EnergyIncrements.m.scss
@@ -81,9 +81,12 @@
   }
 }
 
-.cost {
-  font-size: 12px !important;
+.costs {
   display: flex;
   flex-direction: row;
   gap: 6px;
+
+  .cost {
+    font-size: 12px !important;
+  }
 }
