--- a/src/app/inventory/ItemIcon.m.scss
+++ b/src/app/inventory/ItemIcon.m.scss
@@ -75,7 +75,8 @@ $commonBg: #366f42;
 $rgb-masterworked: dim-hex-to-rgb-values($stat-masterworked);
 .legendaryMasterwork {
   box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.25);
-  background-image: radial-gradient(
+  background-image:
+    radial-gradient(
       ellipse at bottom,
       dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.2),
       transparent 75%
@@ -121,7 +122,8 @@ $rgb-masterworked: dim-hex-to-rgb-values($stat-masterworked);
   opacity: 0.4;
   left: 1.5px;
   filter: drop-shadow(0 0 2px #e8a534);
-  background-image: radial-gradient(
+  background-image:
+    radial-gradient(
       ellipse at bottom,
       dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.2),
       transparent 75%
