--- a/src/app/issue-awareness-banner/Game2Give.m.scss
+++ b/src/app/issue-awareness-banner/Game2Give.m.scss
@@ -59,7 +59,8 @@
   background-color: #e8a534;
   padding: 0.125rem 0.25rem;
   word-wrap: normal;
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       -45deg,
       transparent 33%,
       rgba(0, 0, 0, 0.1) 33%,
