Maybe fix stat spacing

--- a/src/app/store-stats/CharacterStats.m.scss
+++ b/src/app/store-stats/CharacterStats.m.scss
@@ -69,7 +69,7 @@
     }
 
     &:nth-child(n + 2) {
-      justify-content: space-between;
+      justify-content: space-between !important;
     }
   }
 }
