--- a/src/app/compare/CompareColumns.m.scss
+++ b/src/app/compare/CompareColumns.m.scss
@@ -34,8 +34,8 @@
       text-rendering: auto;
       line-height: 1;
       font-size: 8px;
-      margin-left: 3px;
-      margin-right: 2px;
+      margin-left: 4px;
+      margin-right: 0;
       vertical-align: initial;
     }
   }
