CSS modules for socket list/header

--- a/src/app/item-popup/ItemSocketsGeneral.m.scss
+++ b/src/app/item-popup/ItemSocketsGeneral.m.scss
@@ -25,3 +25,9 @@
     margin: 4px 0;
   }
 }
+
+// Uppercased title for socket categories
+.socketCategoryHeader {
+  text-transform: uppercase;
+  margin-bottom: 2px;
+}
