--- a/src/app/destiny1/loadout-builder/loadout-builder.scss
+++ b/src/app/destiny1/loadout-builder/loadout-builder.scss
@@ -1,11 +1,7 @@
 @use '../../variables' as *;
-
-$or-color: var(--theme-accent-primary);
-$and-color: #814bcf;
+@use './LoadoutBuilderLocksDialog.m.scss' as locks;
 
 .loadout-builder {
-  margin-top: 10px;
-
   .section {
     margin-bottom: 16px;
 
@@ -13,10 +9,6 @@ $and-color: #814bcf;
       margin-left: 16px;
       margin-right: 16px;
     }
-  }
-
-  .character-select {
-    margin-bottom: 8px;
   }
 
   .all-armor {
@@ -38,86 +30,24 @@ $and-color: #814bcf;
   }
 
   .ex-or {
-    background-color: $or-color;
+    background-color: locks.$or-color;
   }
 
   .ex-and {
-    background-color: $and-color;
-  }
-
-  .locked-perk-notification img {
-    width: var(--item-size);
-    height: var(--item-size);
-  }
-
-  .perk-addition {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-  }
-
-  .perk-addition-text-container {
-    opacity: 0;
-    display: table-cell;
-    vertical-align: middle;
-    width: var(--item-size);
-    height: var(--item-size);
-
-    @include interactive($hover: true) {
-      opacity: 1;
-      transition: 1s;
-    }
+    background-color: locks.$and-color;
   }
 
   .perk-select-hidden .perk-select-box {
     display: none;
   }
 
-  .perk-addition-text {
-    display: block;
-    font-size: 8px;
-  }
-
   .labels {
     float: left;
     clear: both;
   }
-  .label {
-    text-align: center;
-  }
-  .other-configs {
-    text-align: center;
-  }
   .vendor-checkbox {
     margin: 0;
     margin-left: 10px;
-  }
-
-  .loadout {
-    margin-bottom: 20px;
-  }
-
-  .expand-configs {
-    @include interactive($hover: true) {
-      color: var(--theme-accent-primary);
-      cursor: pointer;
-    }
-  }
-
-  .loadout-builder-item {
-    margin-bottom: 4px;
-  }
-
-  .loadout-builder-controls {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 7px;
-
-    > * {
-      margin-right: 8px;
-    }
   }
 
   .loadout-builder-section {
@@ -231,10 +161,6 @@ $and-color: #814bcf;
     }
   }
 
-  .lock-container {
-    position: relative;
-  }
-
   .item-container {
     margin: 20px 17px 0 0;
   }
@@ -247,86 +173,11 @@ $and-color: #814bcf;
     margin-right: 5px;
   }
 
-  .locked-item {
-    margin-right: 20px;
-    position: relative;
-    text-align: center;
-    width: calc(var(--item-size) + 15px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    .empty-item {
-      background-color: #656565;
-      width: var(--item-size);
-      height: var(--item-size);
-      border: 2px solid #ddd;
-      margin-bottom: 4px;
-    }
-
-    .on-drag-enter {
-      background-color: rgba(200, 200, 200, 0.2);
-    }
-    .on-drag-hover {
-      box-shadow: inset 0 0 6px 0 rgba(200, 200, 200, 0.7);
-    }
-  }
-
-  .item-overlay-container {
-    position: relative;
-    display: inline-block;
-  }
-
-  .vendor-icon-background {
-    background-color: rgba(100, 100, 100, 0.6);
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    top: 0;
-    left: 0;
-    z-index: 2;
-  }
-
-  .vendor-icon {
-    width: 20px;
-    height: 20px;
-  }
-
   .excluded-item {
     margin-right: 5px;
     margin-left: 5px;
     margin-top: 5px;
     position: relative;
-  }
-
-  .dim-stats {
-    display: inline-block;
-    margin-left: 22px;
-    flex: 1;
-
-    @media (max-width: 680px) {
-      margin-left: 4px;
-    }
-
-    .stat-bars {
-      width: 375px;
-      margin-top: 0;
-
-      @media (max-width: 680px) {
-        width: 150px;
-        display: inline-block;
-        .stat {
-          margin-right: 0;
-        }
-      }
-    }
-  }
-  .set-item {
-    position: relative;
-    margin-right: 16px;
-  }
-  .set-item:last-child {
-    margin-right: 0;
   }
 
   .excluded-items {
@@ -345,66 +196,5 @@ $and-color: #814bcf;
 
   .excluded-container:last-child {
     margin-right: 0;
-  }
-}
-
-.smaller-talent-grid {
-  width: 71px;
-  max-height: 48px;
-}
-
-.perk-select-popup {
-  left: 6px;
-  top: 0;
-
-  /* stylelint-disable-next-line no-descending-specificity */
-  .perk-select-box {
-    user-select: none;
-    display: flex;
-    flex-flow: row wrap;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: calc(((var(--item-size) + 8px) * 5) + 14px);
-    min-height: calc((var(--item-size) * 5) + 10px);
-    overflow-y: auto;
-    background-color: #656565;
-    border: 2px solid #ddd;
-    z-index: 3;
-    & .perk {
-      width: calc(var(--item-size) + 20px);
-      padding-left: 3px;
-      padding-right: 3px;
-      cursor: pointer;
-
-      @include interactive($hover: true) {
-        background-color: $or-color;
-      }
-    }
-
-    & .active-perk-or {
-      background-color: $or-color;
-    }
-
-    &.shift-held .perk {
-      @include interactive($hover: true) {
-        background-color: $and-color;
-      }
-    }
-    & .active-perk-and {
-      background-color: $and-color;
-    }
-
-    & .perk img {
-      width: var(--item-size);
-      height: var(--item-size);
-      display: block;
-      margin: auto;
-    }
-
-    & .perk small {
-      text-align: center;
-      display: block;
-    }
   }
 }
