--- a/src/app/destiny1/loadout-builder/LoadoutBuilderLockPerk.m.scss
+++ b/src/app/destiny1/loadout-builder/LoadoutBuilderLockPerk.m.scss
@@ -6,13 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.perkAddition {
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
+  gap: 4px;
 }
 
 .itemSized {
@@ -24,25 +18,27 @@
   composes: itemSized;
   background-color: #656565;
   border: 2px solid #ddd;
-  margin-bottom: 4px;
+  cursor: pointer;
+
+  > img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
-.perkAdditionTextContainer {
-  composes: itemSized;
+.lockPerkIcon {
+  composes: flexColumn from '../../dim-ui/common.m.scss';
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
   opacity: 0;
-  display: table-cell;
-  vertical-align: middle;
 
   @include interactive($hover: true) {
     opacity: 1;
   }
-}
 
-.perkAdditionText {
-  display: block;
-  font-size: 8px;
-}
-
-.label {
-  text-align: center;
+  > small {
+    font-size: 8px;
+  }
 }
