--- a/src/app/destiny1/loadout-drawer/Buttons.m.scss
+++ b/src/app/destiny1/loadout-drawer/Buttons.m.scss
@@ -7,5 +7,5 @@
   justify-content: center;
   margin: 0;
   text-decoration: none;
-  width: calc(var(--item-size) / 2);
+  width: var(--item-size);
 }
