--- a/src/app/item-popup/ItemPopupBody.scss
+++ b/src/app/item-popup/ItemPopupBody.scss
@@ -41,19 +41,13 @@
   }
 
   .crafted-progress {
+    --objective-progress-color: #{$deepsight-border-color};
+    --objective-background-color: var(--theme-item-popup-progress-bar-bg);
     padding: 4px 10px 4px;
     background: var(--theme-item-popup-panel-bg);
     gap: 4px;
 
     display: flex;
     align-items: center;
-
-    .objective-progress {
-      background: var(--theme-item-popup-progress-bar-bg);
-    }
-
-    .objective-progress-bar {
-      background-color: $deepsight-border-color;
-    }
   }
 }
