--- a/src/app/themes/_theme-classic.scss
+++ b/src/app/themes/_theme-classic.scss
@@ -2,6 +2,8 @@
 .theme-classic {
   // App
   --theme-app-bg: #313233;
+  // Background color for (currently only) Settings page sections. Distinguishes them from theme-app-bg.
+  --theme-section-bg: #222;
 
   // App background gradient pattern
   --theme-app-bg-gradient: var(--theme-app-bg);
@@ -17,5 +19,6 @@
   --theme-organizer-row-odd-bg: var(--theme-app-bg);
   --theme-organizer-row-even-bg: #252627;
 
+  // Background color for the search bar. Distinguishes it from theme-header-nav-bg.
   --theme-search-bg: var(--theme-app-bg);
 }
