--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -118,41 +118,6 @@
   position: absolute;
   padding: 0;
   right: 4px;
+  top: calc(32px + 4px + 1lh);
   cursor: pointer;
-}
-
-/* COLUMN STYLES */
-
-.initialItem {
-  color: var(--theme-accent-primary);
-  font-weight: bold;
-}
-
-.itemName {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  // Add the magnifying glass icons to items that can be clicked to find them
-  &.isFindable {
-    cursor: pointer;
-    &::after {
-      content: '\f002';
-      // Copied from .fas classes:
-      /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
-      font-family: 'Font Awesome 5 Free';
-      font-weight: 900;
-      -moz-osx-font-smoothing: grayscale;
-      -webkit-font-smoothing: antialiased;
-      display: inline-block;
-      font-style: normal;
-      font-variant: normal;
-      text-rendering: auto;
-      line-height: 1;
-      font-size: 8px;
-      margin-left: 4px;
-      vertical-align: initial;
-    }
-  }
 }
