Break out mods from perks, correctly choose perks to sort

--- a/src/app/item-popup/ArchetypeSocket.m.scss
+++ b/src/app/item-popup/ArchetypeSocket.m.scss
@@ -38,7 +38,7 @@
   &.minimal {
     background-color: transparent;
     align-items: center;
-    padding: 0 4px;
+    padding: 0;
     margin: 0;
   }
 
